--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
                 // Send post to API
                 $.ajax({
-                    url: 'https://superphone.io/w/WPrRX9', // Url where to submit the request
+                    url: 'https://superphone.io/w/Ejjd3E', // Url where to submit the request
                     type: "POST",
                     beforeSend: function (request) {
                         request.setRequestHeader("Access-Control-Allow-Origin", "*");
