--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="page-center">
     <div class="custom-form">
         <div class="container">
-            <h1 class="text-center" >Imagine if you could text Dr King<br>What would you say? </h1>
+            <h1 class="text-center" >Imagine if<br>you could text Dr King<br>What would you say? </h1>
 	    <p class="text-center" style="font-size: 21px">Leave your number below<br>To be notified as the project progresses:</p>
             <form id="addContact" class="form-horizontal" style="min-width: 100%" method="POST" action="#" autocomplete="false" data-parsley-validate>
                 <div class="form-group">
